--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/postcss": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.11.2",
     "tailwindcss": "^4.0.1"
   }
